# glyphcast

./: .gitignore  AGENTS.md  Makefile  README.md  progress.md  pyproject.toml
.cursor/hooks/state/: continual-learning-index.json  continual-learning.json
.github/workflows/: ci.yml
artifacts/models/chars/: char_cnn.pt
artifacts/renders/: giphy-ml.txt  giphy.txt
configs/: default.yaml  fast.yaml  high_quality.yaml
glyphcast/: __init__.py  cli.py  config.py  constants.py  types.py
glyphcast/commands/: benchmark.py  models.py  render.py  train.py
glyphcast/io/: __init__.py  gif.py  video.py
glyphcast/models/: char_cnn.py  char_rf.py  edge_backends.py
glyphcast/pipeline/: __init__.py  background_suppression.py  batching.py  char_mapper.py  edge_detector.py  frame_pipeline.py  optical_flow.py  postprocess.py  preprocess.py  state.py  temporal.py  tile_extractor.py
glyphcast/render/: __init__.py  compositor.py  font_atlas.py  terminal.py  text_export.py  video_overlay.py
glyphcast/training/: augment.py  eval_char_model.py  font_render.py  glyph_dataset.py  train_char_model.py
glyphcast/utils/: profiling.py
scripts/: download_edge_models.py
tests/: test_background_suppression.py  test_benchmark.py  test_char_mapper.py  test_cli.py  test_compositor.py  test_config.py  test_edge_detector.py  test_frame_pipeline.py  test_render_terminal.py  test_temporal.py  test_text_export.py  test_training.py  test_video_io.py  test_video_overlay.py
